agents_app2: complete feature #5 карточка_товара
